- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 8.0.0
 - 
    None
 
- 
        
 - 
        9f469cef11 (qt-creator/qt-creator/8.0) 9f469cef11 (qt-creator/qt-creator/qds-3.6) 9f469cef11 (qt-creator/qt-creator/9.0)
 
When I start Qt Creator with a registered Qt Android version, but without configured Android SDK (thus no Android kits), these Issues appear per Qt Android version.
:-1: error: Project ERROR: You need to set the ANDROID_NDK_ROOT environment variable to point to your Android NDK.
:-1: error: Could not read qmake configuration file C:/Qt/6.2.4/android_arm64_v8a/mkspecs/android-clang/qmake.conf.
Conclusion: Don't parse the mkspecs without configured Android SDK, and no ANDROID_NDK_ROOT being set.
- relates to
 - 
                    
QTCREATORBUG-27761 CMake: ANDROID_NDK_ROOT is not set
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-27805 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 420614,4 | Android: Don't show 2 issues per Android Qt if unconfigured SDK | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 420773,1 | Android: Don't show 2 issues per Android Qt if unconfigured SDK | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |