Android: Don't show 2 issues per Android Qt if unconfigured SDK

Only call registerNewToolChains() and updateAutomaticKitList() if the
Android SDK is configured and the required environment for the mkspec/
qmake parsing is set.

Fixes: QTCREATORBUG-27805
Change-Id: I66eca659074afeea97a894cc418a95675e46ff1e
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>