src/plugins/android/androidpotentialkit.cpp
@@ -74,7 +74,7 @@ bool AndroidPotentialKit::isEnabled() const
     }
 
     return QtSupport::QtVersionManager::version([](const QtSupport::QtVersion *v) {
-        return v->isValid() && v->type() == QString::fromLatin1(Constants::ANDROID_QT_TYPE);
+        return v->type() == QString::fromLatin1(Constants::ANDROID_QT_TYPE);
     });
 }
 
